[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "uedge_dcp"
authors = [
    {name = "Dominic Power", email = "power8@llnl.gov"},
]
description = "UEDGE tools"
readme = "README.md"
requires-python = ">=3.7"
dependencies = ['h5py', 'mppl', 'forthon', 'uedge', 'matplotlib', 
                'numpy', 'scipy', 'pandas', 'shapely', 'netCDF4', 'pyaml']

version = "0.1"
